--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "@emotion/styled": "^11.14.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/styles": "^4.11.5",
+    "@material-ui/system": "^4.12.2",
+    "@material-ui/utils": "^4.11.2",
     "@mui/icons-material": "^5.16.14",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.14",
@@ -20,13 +23,15 @@
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.30.1",
     "mongoose": "^8.5.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "scheduler": "^0.25.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
